# webwire-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
src/: ast.rs  common.rs  idl.rs  lib.rs  main.rs  schema.rs
src/codegen/: mod.rs  rust.rs  ts.rs
src/idl/: common.rs  document.rs  endpoint.rs  enum.rs  errors.rs  field_option.rs  fieldset.rs  include.rs  method.rs  mod.rs  namespace.rs  operation.rs  service.rs  struct.rs  type.rs  value.rs
src/schema/: document.rs  enum.rs  errors.rs  fieldset.rs  fqtn.rs  mod.rs  namespace.rs  options.rs  service.rs  struct.rs  type.rs  typemap.rs
tests/: chat.ww  first_test.rs  idl_complete.ninjapi  idl_complete.rs  idl_complete.ww
