[package]
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
edition = "2018"
name = "webwire-cli"
description = "Contract-First API System - Command Line Interface"
homepage = "https://webwire.dev/"
version = "0.1.0"

[dependencies]
clap = "2.33"
nom = "6.0"
nom_locate = { git = "https://github.com/fflorent/nom_locate", commit = "164fd443e266c7d681b7010341a3f3eef344fcb9" }
proc-macro2 = "1.0"
quote = "1.0"
