[package]
name = "webwire-cli"
version = "0.1.6"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Contract-First API System - Command Line Interface"
keywords = ["webwire", "contract-first", "api", "cli", "codegen"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/webwire/webwire-cli"
readme = "README.md"
edition = "2018"

[dependencies]
clap = "2.33"
nom = "6.0"
nom_locate = "3.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["parsing"] }

[[bin]]
name = "webwire"
path = "src/main.rs"
